# vkcv-framework

./: .clang-format  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  AUTHORS  CHANGELOG.md  CMakeLists.txt  Doxyfile  LICENSE  README.md
.github/: FUNDING.yml
modules/: CMakeLists.txt
modules/algorithm/: CMakeLists.txt  README.md
modules/algorithm/config/: FidelityFX_SPD.cmake
modules/asset_loader/: CMakeLists.txt  README.md
modules/asset_loader/config/: FX_GLTF.cmake  NLOHMANN_JSON.cmake  STB.cmake
modules/camera/: CMakeLists.txt  README.md
modules/camera/config/: GLM.cmake  OPEN_XR_SDK.cmake
modules/compute/: CMakeLists.txt
modules/compute/config/: NNEF-Tools.cmake
modules/compute/src/: compute.cpp
modules/denoising/: CMakeLists.txt  README.md
modules/denoising/config/: FidelityFX_Denoiser.cmake
modules/denoising/shaders/: reflectionDenoiser_prefilter.hlsl  reflectionDenoiser_reproject.hlsl  reflectionDenoiser_resolveTemporal.hlsl  shadowDenoiser_filter.hlsl  shadowDenoiser_prepare.hlsl  shadowDenoiser_tileClassification.hlsl
modules/effects/: CMakeLists.txt  README.md
modules/effects/shaders/: bloomFlaresComposite.comp  gammaCorrection.comp
modules/geometry/: CMakeLists.txt  README.md
modules/geometry/config/: GLM.cmake
modules/gui/: CMakeLists.txt  README.md
modules/gui/config/: ImGui.cmake
modules/material/: CMakeLists.txt  README.md
modules/meshlet/: CMakeLists.txt  README.md
modules/meshlet/config/: GLM.cmake
modules/rtx/: CMakeLists.txt
modules/scene/: CMakeLists.txt  README.md
modules/shader_compiler/: CMakeLists.txt  README.md
modules/shader_compiler/config/: GLSLANG.cmake  JSON-C.cmake  LZ4.cmake  MINIZ.cmake  Murmur3.cmake  SLANG.cmake  SPIRV-Headers.cmake  Shady.cmake  UNORDERED_DENSE.cmake
modules/testing/: CMakeLists.txt  GLM.cmake
modules/tone_mapping/: CMakeLists.txt  README.md
modules/tone_mapping/config/: GLSL_TONE_MAP.cmake
modules/upscaling/: CMakeLists.txt  README.md
modules/upscaling/config/: FidelityFX_FSR.cmake  FidelityFX_FSR2.cmake  NVIDIAImageScaling.cmake
projects/: CMakeLists.txt
projects/bindless_textures/: .gitignore  CMakeLists.txt  README.md
projects/bindless_textures/src/: main.cpp
projects/bloom/: CMakeLists.txt
projects/bloom/src/: BloomAndFlares.cpp  BloomAndFlares.hpp  main.cpp
projects/cmd_sync_test/: .gitignore  CMakeLists.txt
projects/cmd_sync_test/src/: main.cpp
projects/draw_indirect/: .gitignore  CMakeLists.txt
projects/draw_indirect/src/: main.cpp
projects/fire_works/: .gitignore  CMakeLists.txt  README.md
projects/fire_works/shaders/: add.comp  clear.comp  event.inc  explosion.comp  fluid.comp  gather.comp  generation.comp  motion.comp  particle.frag  particle.inc  particle.vert  physics.inc  point.inc  sample.comp  scale.comp  smoke.frag  smoke.inc  smoke.vert  tonemapping.comp  trail.comp  trail.geom  trail.inc  trail.vert  voxel.comp  voxel.inc  voxel_particle.comp  voxel_smoke.comp  voxel_trail.comp
projects/fire_works/src/: main.cpp
projects/first_mesh/: .gitignore  CMakeLists.txt  README.md
projects/first_mesh/src/: main.cpp
projects/first_scene/: .gitignore  CMakeLists.txt  README.md
projects/first_scene/src/: main.cpp
projects/first_triangle/: .gitignore  CMakeLists.txt  README.md
projects/first_triangle/shaders/: comp.spv  compile.bat  shader.comp  shader.vert  vert.spv
projects/first_triangle/src/: main.cpp
projects/head_demo/: .gitignore  CMakeLists.txt  README.md
projects/head_demo/src/: main.cpp
projects/indirect_dispatch/: .gitignore  CMakeLists.txt  README.md
projects/indirect_dispatch/src/: App.cpp  App.hpp  AppConfig.hpp  AppSetup.cpp  AppSetup.hpp  MotionBlur.cpp  MotionBlur.hpp  MotionBlurConfig.hpp  MotionBlurSetup.cpp  MotionBlurSetup.hpp  main.cpp
projects/indirect_draw/: .gitignore  CMakeLists.txt  README.md
projects/indirect_draw/src/: main.cpp
projects/mesh_shader/: .gitignore  CMakeLists.txt  README.md
projects/mesh_shader/assets/: monke.glb
projects/mesh_shader/src/: MeshStruct.hpp  main.cpp  mesh.hpp
projects/mpm/: CMakeLists.txt  README.md
projects/mpm/shaders/: grid.frag  grid.vert  lines.vert  particle.frag
projects/mpm/src/: main.cpp
projects/neural_network/: CMakeLists.txt
projects/neural_network/src/: main.cpp
projects/particle_simulation/: .gitignore  CMakeLists.txt  README.md
projects/particle_simulation/shaders/: comp1.spv  comp_space.spv  comp_water.spv  compile.bat  frag.spv  frag_space.spv  frag_water.spv  shader.frag  shader.vert  shader1.comp  shader_gravity.comp  shader_space.comp  shader_space.frag  shader_water.comp  shader_water.frag  tonemapping.comp  vert.spv
projects/particle_simulation/src/: BloomAndFlares.cpp  BloomAndFlares.hpp  Particle.cpp  Particle.hpp  ParticleSystem.cpp  ParticleSystem.hpp  main.cpp
projects/path_tracer/: .gitignore  CMakeLists.txt  README.md
projects/path_tracer/shaders/: clearImage.comp  combineImages.comp  path_tracer.comp  presentImage.comp
projects/path_tracer/src/: main.cpp
projects/ray_tracer/: .gitignore  CMakeLists.txt  README.md
projects/ray_tracer/shaders/: raytracing.comp
projects/ray_tracer/src/: main.cpp  scene.hpp
projects/rt_ambient_occlusion/: .gitignore  CMakeLists.txt  README.md
projects/rt_ambient_occlusion/src/: main.cpp
projects/rtx/: CMakeLists.txt
projects/rtx/src/: main.cpp  teapot.hpp
projects/rtx_ambient_occlusion/: .gitignore  CMakeLists.txt  LICENSE  README.md
projects/rtx_ambient_occlusion/src/: main.cpp
projects/saf_r/: .gitignore  CMakeLists.txt
projects/saf_r/shaders/: raytracing.comp  shader.frag  shader.vert
projects/saf_r/src/: main.cpp  safrScene.cpp  safrScene.hpp
projects/sph/: .gitignore  CMakeLists.txt  README.md
projects/sph/shaders/: flip.comp  force.comp  particleShading.inc  particle_params.inc  pressure.comp  shader.vert  shader_water.comp  shader_water.frag  shader_water1.comp  shader_water2.comp  tonemapping.comp  updateData.comp
projects/voxelization/: .gitignore  CMakeLists.txt  README.md
projects/wobble_bobble/: .gitignore  CMakeLists.txt
(+568 files in other folders)
