
# Add new projects/examples here:
add_subdirectory(first_triangle)
add_subdirectory(first_mesh)
add_subdirectory(first_scene)
add_subdirectory(particle_simulation)
add_subdirectory(rtx_ambient_occlusion)
add_subdirectory(sph)
add_subdirectory(voxelization)
add_subdirectory(mesh_shader)
add_subdirectory(saf_r)
add_subdirectory(indirect_dispatch)
add_subdirectory(path_tracer)