
include(${vkcv_config_ext}/Project.cmake)

# Add new projects/examples here:
add_subdirectory(bindless_textures)
add_subdirectory(fire_works)
add_subdirectory(first_triangle)
add_subdirectory(first_mesh)
add_subdirectory(first_scene)
add_subdirectory(head_demo)
add_subdirectory(indirect_dispatch)
add_subdirectory(indirect_draw)
add_subdirectory(mesh_shader)
add_subdirectory(particle_simulation)
add_subdirectory(path_tracer)
add_subdirectory(rtx_ambient_occlusion)
add_subdirectory(saf_r)
add_subdirectory(sph)
add_subdirectory(voxelization)
add_subdirectory(wobble_bobble)